[package]
name = "rdecimal"
version = "0.1.0"
authors = ["std"]
edition = "2018"

[features]
default = ["serde", "postgres-impl"]
postgres-impl = ["postgres", "byteorder"]

[dependencies]
num = "0.2"
serde = { version = "1.0", optional = true }
postgres = { version = "0.15", optional = true }
byteorder = { version = "1.3", optional = true }

[dev-dependencies]
rand = "0.7"
serde_json = "1.0"
serde_derive = "1.0"
